motor-core-java/k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motor-transferencia-dep
  labels:
    app: motor-financeiro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: motor-financeiro
  template:
    metadata:
      labels:
        app: motor-financeiro
    spec:
      containers:
        - name: motor-app
          image: motor-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
