motor-core-java/k8s-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banco-postgres
  template:
    metadata:
      labels:
        app: banco-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service # <- Olha o nome que o Spring Boot tá procurando!
spec:
  selector:
    app: banco-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
