motor-core-java/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: motor-transferencia-service
spec:
  type: LoadBalancer
  selector:
    app: motor-financeiro
  ports:
    - protocol: TCP
      port: 8080 # Mudamos para 8080 para o Mac não bloquear por segurança
      targetPort: 8080
